--- a/InventoryApplication/.classpath
+++ b/InventoryApplication/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/kobru/OneDrive/Desktop/DeskTop/School/2021_Winter/ENSF_409/lib/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Muhammad/Desktop/mysql-connector-java-8.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
