--- a/InventoryApplication/.classpath
+++ b/InventoryApplication/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/kobru/OneDrive/Desktop/DeskTop/School/2021_Winter/ENSF_409/lib/mysql-connector-java-8.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
